Fixed Dapp Alignment

--- a/client/src/styles/Feed.css
+++ b/client/src/styles/Feed.css
@@ -4,7 +4,7 @@
 } */
 
 .feed {
-    flex: 0.45;
+    flex: 0.5;
     border-right: 1px solid var(--D-border-color);
     min-width: fit-content;
     overflow-y: scroll;
