--- a/client/src/styles/Widgets.css
+++ b/client/src/styles/Widgets.css
@@ -1,7 +1,7 @@
 .widgets {
     padding: 15px 20px;
     color: var(--D-font-color);
-    flex: 0.25;
+    flex: 0.3;
     display: flex;
     flex-direction: column;
 }
